refactor: change allowed origins